2009-09-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextEditor.cs: Reduce time for showing the
	  tooltip. Closes bug 531209 - Tooltip-delay when inspecting
	  variables is too slow.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/FoldActions.cs: Added toggle all folds
	  command.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Reduced the
	  maximum size of the code segment preview.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Code segment
	  preview has now a small inner margin.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: tooltip/code preview now hide
	  on scrolling events.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Code segment
	  preview is no longer fixed size.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Made code
	  segment preview font smaller.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: dnd is now atomic.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextEditorData.cs: Fixed a dnd bug.

2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Fixed text link update.

2009-09-17  Mike Krüger  <mkrueger@novell.com>

	* Styles/VisualStudioStyle.xml: this/base is no longer bold in
	  vs highlighting.

2009-09-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.csproj: Set the target framework to 3.5

2009-09-17  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Mono.TextEditor/TextRenderer.cs:
	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 539797 - Text
	  editor trying/failing to load strange font'.

2009-09-16  Mike Krüger  <mkrueger@novell.com>
